--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -84,17 +84,31 @@ jobs:
           echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
           echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
 
-          # Créer un fichier de configuration pour l'API Terraform Cloud (uniquement pour le stockage de l'état)
+          # Créer un fichier de configuration pour l'API Terraform Cloud
           cat > ~/.terraformrc << EOF
           credentials "app.terraform.io" {
             token = "${{ secrets.TF_API_TOKEN }}"
           }
           EOF
 
+          # Créer un fichier .env pour Terraform Cloud
+          cat > .env << EOF
+          AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION=${{ env.AWS_REGION }}
+          EOF
+
       # Étape 5: Initialisation de Terraform
       - name: Terraform Init
         id: init
-        run: terraform init
+        run: |
+          # Exporter les variables d'environnement AWS
+          export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+          export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          export AWS_DEFAULT_REGION="${{ env.AWS_REGION }}"
+
+          # Initialiser Terraform
+          terraform init
 
       # Étape 5: Validation de la configuration Terraform
       - name: Terraform Validate
@@ -120,6 +134,11 @@ jobs:
             chmod 600 ~/.ssh/id_rsa
             echo "Clé SSH privée configurée."
           fi
+
+          # Exporter les variables d'environnement AWS
+          export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+          export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          export AWS_DEFAULT_REGION="${{ env.AWS_REGION }}"
 
           terraform plan \
             -var="db_username=${{ secrets.DB_USERNAME }}" \
@@ -234,6 +253,10 @@ jobs:
         id: empty_s3
         if: github.event.inputs.action == 'destroy'
         run: |
+          # Exporter les variables d'environnement AWS
+          export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+          export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          export AWS_DEFAULT_REGION="${{ env.AWS_REGION }}"
           echo "::group::Vidage du bucket S3"
           # Récupérer le nom du bucket S3 depuis les outputs Terraform
           S3_BUCKET_NAME=$(terraform output -raw s3_bucket_name 2>/dev/null || echo "")
@@ -268,6 +291,11 @@ jobs:
             echo "Clé SSH privée configurée."
           fi
 
+          # Exporter les variables d'environnement AWS
+          export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+          export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          export AWS_DEFAULT_REGION="${{ env.AWS_REGION }}"
+
           terraform destroy -auto-approve \
             -var="db_username=${{ secrets.DB_USERNAME }}" \
             -var="db_password=${{ secrets.DB_PASSWORD }}" \
@@ -293,6 +321,10 @@ jobs:
       - name: Cleanup IAM Profiles
         if: github.event.inputs.action == 'destroy'
         run: |
+          # Exporter les variables d'environnement AWS
+          export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+          export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          export AWS_DEFAULT_REGION="${{ env.AWS_REGION }}"
           echo "::group::Nettoyage des profils IAM persistants"
 
           # Définir les noms des ressources IAM à nettoyer
@@ -341,6 +373,10 @@ jobs:
       - name: Cleanup EC2 Instances
         if: github.event.inputs.action == 'destroy'
         run: |
+          # Exporter les variables d'environnement AWS
+          export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+          export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          export AWS_DEFAULT_REGION="${{ env.AWS_REGION }}"
           echo "::group::Nettoyage des instances EC2 persistantes"
 
           # Définir les noms des instances EC2 à nettoyer
@@ -384,6 +420,10 @@ jobs:
       - name: Cleanup Network Interfaces
         if: github.event.inputs.action == 'destroy'
         run: |
+          # Exporter les variables d'environnement AWS
+          export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+          export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          export AWS_DEFAULT_REGION="${{ env.AWS_REGION }}"
           echo "::group::Nettoyage des interfaces réseau persistantes"
 
           # Récupérer toutes les interfaces réseau disponibles
@@ -411,6 +451,10 @@ jobs:
       - name: Cleanup Security Groups
         if: github.event.inputs.action == 'destroy'
         run: |
+          # Exporter les variables d'environnement AWS
+          export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+          export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          export AWS_DEFAULT_REGION="${{ env.AWS_REGION }}"
           echo "::group::Nettoyage des groupes de sécurité persistants"
 
           # Définir les noms des groupes de sécurité à nettoyer
