Amélioration de la gestion du bucket S3 dans le workflow GitHub Actions

--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -165,10 +165,74 @@ jobs:
           echo "::endgroup::"
         continue-on-error: false  # Arrête le workflow si le plan échoue
 
-      # Étape 7.5: Téléchargement des scripts dans S3 (uniquement pour l'application)
+      # Étape 7.5: Vérification et création du bucket S3 si nécessaire
+      - name: Ensure S3 Bucket Exists
+        id: ensure_s3
+        if: github.event.inputs.action == 'apply'
+        run: |
+          echo "::group::Vérification et création du bucket S3"
+          # Exporter les variables d'environnement AWS
+          export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+          export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          export AWS_DEFAULT_REGION="${{ env.AWS_REGION }}"
+
+          # Vérifier si le secret TF_S3_BUCKET_NAME est disponible
+          if [ ! -z "${{ secrets.TF_S3_BUCKET_NAME }}" ]; then
+            echo "Secret TF_S3_BUCKET_NAME trouvé: ${{ secrets.TF_S3_BUCKET_NAME }}"
+            S3_BUCKET_NAME="${{ secrets.TF_S3_BUCKET_NAME }}"
+
+            # Vérifier si le bucket existe réellement
+            if aws s3api head-bucket --bucket $S3_BUCKET_NAME 2>/dev/null; then
+              echo "Le bucket S3 existe: $S3_BUCKET_NAME"
+            else
+              echo "Le bucket S3 n'existe pas malgré le secret. Création nécessaire..."
+              S3_BUCKET_NAME=""
+            fi
+          else
+            echo "Secret TF_S3_BUCKET_NAME non trouvé. Création nécessaire..."
+            S3_BUCKET_NAME=""
+          fi
+
+          # Si le bucket n'existe pas, le créer via Terraform
+          if [ -z "$S3_BUCKET_NAME" ]; then
+            echo "Création du bucket S3 via Terraform..."
+            # Appliquer uniquement le module S3
+            terraform apply -auto-approve -target=module.s3 \
+              -var="aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+              -var="aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+              -var="db_username=${{ secrets.DB_USERNAME }}" \
+              -var="db_password=${{ secrets.DB_PASSWORD }}" \
+              -var="environment=${{ github.event.inputs.environment || 'dev' }}"
+
+            # Récupérer le nom du bucket S3 après la création
+            S3_BUCKET_NAME=$(terraform output -raw s3_bucket_name)
+
+            if [ -z "$S3_BUCKET_NAME" ]; then
+              echo "ERREUR: Impossible de récupérer le nom du bucket S3 après création."
+              exit 1
+            fi
+
+            echo "Bucket S3 créé avec succès: $S3_BUCKET_NAME"
+          fi
+
+          # Stocker le nom du bucket pour les étapes suivantes
+          echo "S3_BUCKET_NAME=$S3_BUCKET_NAME" >> $GITHUB_ENV
+          echo "::endgroup::"
+
+      # Étape 7.6: Mise à jour du secret GitHub avec le nom du bucket S3
+      - name: Update S3 Bucket Name Secret
+        id: update_secret
+        if: github.event.inputs.action == 'apply' && env.S3_BUCKET_NAME != '' && env.S3_BUCKET_NAME != secrets.TF_S3_BUCKET_NAME
+        uses: gliech/create-github-secret-action@v1
+        with:
+          name: TF_S3_BUCKET_NAME
+          value: ${{ env.S3_BUCKET_NAME }}
+          pa_token: ${{ secrets.GH_PAT }}
+
+      # Étape 7.7: Téléchargement des scripts dans S3
       - name: Upload Scripts to S3
         id: upload_scripts
-        if: github.event.inputs.action == 'apply'
+        if: github.event.inputs.action == 'apply' && env.S3_BUCKET_NAME != ''
         run: |
           echo "::group::Téléchargement des scripts dans S3"
           # Créer le fichier de clé SSH si le secret est disponible
@@ -179,48 +243,21 @@ jobs:
             echo "Clé SSH privée configurée."
           fi
 
-          # Exporter les variables d'environnement AWS
-          export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
-          export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-          export AWS_DEFAULT_REGION="${{ env.AWS_REGION }}"
+          echo "Téléchargement des scripts dans le bucket S3: ${{ env.S3_BUCKET_NAME }}"
 
-          # Récupérer le nom du bucket S3 depuis les outputs Terraform
-          S3_BUCKET_NAME=$(terraform output -raw s3_bucket_name 2>/dev/null || echo "")
+          # Télécharger les scripts de monitoring
+          echo "Téléchargement des scripts de monitoring..."
+          aws s3 cp --recursive ./scripts/ec2-monitoring/ s3://${{ env.S3_BUCKET_NAME }}/scripts/ec2-monitoring/
 
-          if [ -z "$S3_BUCKET_NAME" ]; then
-            echo "Aucun bucket S3 trouvé dans les outputs Terraform. Création de l'infrastructure nécessaire..."
-            # Appliquer uniquement le module S3
-            terraform apply -auto-approve -target=module.s3 \
-              -var="aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
-              -var="aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
-              -var="db_username=${{ secrets.DB_USERNAME }}" \
-              -var="db_password=${{ secrets.DB_PASSWORD }}" \
-              -var="environment=${{ github.event.inputs.environment }}"
+          # Télécharger les scripts Java/Tomcat
+          echo "Téléchargement des scripts Java/Tomcat..."
+          aws s3 cp --recursive ./scripts/ec2-java-tomcat/ s3://${{ env.S3_BUCKET_NAME }}/scripts/ec2-java-tomcat/
 
-            # Récupérer le nom du bucket S3 après la création
-            S3_BUCKET_NAME=$(terraform output -raw s3_bucket_name)
-          fi
+          # Télécharger les scripts Docker
+          echo "Téléchargement des scripts Docker..."
+          aws s3 cp --recursive ./scripts/docker/ s3://${{ env.S3_BUCKET_NAME }}/scripts/docker/
 
-          if [ ! -z "$S3_BUCKET_NAME" ]; then
-            echo "Téléchargement des scripts dans le bucket S3: $S3_BUCKET_NAME"
-
-            # Télécharger les scripts de monitoring
-            echo "Téléchargement des scripts de monitoring..."
-            aws s3 cp --recursive ./scripts/ec2-monitoring/ s3://$S3_BUCKET_NAME/scripts/ec2-monitoring/
-
-            # Télécharger les scripts Java/Tomcat
-            echo "Téléchargement des scripts Java/Tomcat..."
-            aws s3 cp --recursive ./scripts/ec2-java-tomcat/ s3://$S3_BUCKET_NAME/scripts/ec2-java-tomcat/
-
-            # Télécharger les scripts Docker
-            echo "Téléchargement des scripts Docker..."
-            aws s3 cp --recursive ./scripts/docker/ s3://$S3_BUCKET_NAME/scripts/docker/
-
-            echo "Scripts téléchargés avec succès dans le bucket S3: $S3_BUCKET_NAME"
-          else
-            echo "ERREUR: Impossible de récupérer le nom du bucket S3. Les scripts ne seront pas téléchargés."
-            exit 1
-          fi
+          echo "Scripts téléchargés avec succès dans le bucket S3: ${{ env.S3_BUCKET_NAME }}"
           echo "::endgroup::"
 
       # Étape 8: Application des changements Terraform
