--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -202,7 +202,21 @@ jobs:
               -var="aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
               -var="db_username=${{ secrets.DB_USERNAME }}" \
               -var="db_password=${{ secrets.DB_PASSWORD }}" \
-              -var="environment=${{ github.event.inputs.environment || 'dev' }}"
+              -var="db_name=${{ secrets.DB_NAME || 'yourmedia' }}" \
+              -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
+              -var="github_token=${{ secrets.GH_PAT || '' }}" \
+              -var="repo_owner=${{ github.repository_owner }}" \
+              -var="repo_name=${{ github.repository }}" \
+              -var="ssh_private_key_path=~/.ssh/id_rsa" \
+              -var="ssh_private_key_content='${{ secrets.EC2_SSH_PRIVATE_KEY || '' }}'" \
+              -var="ssh_public_key='${{ secrets.EC2_SSH_PUBLIC_KEY || '' }}'" \
+              -var="enable_provisioning=${{ secrets.EC2_SSH_PRIVATE_KEY != '' }}" \
+              -var="environment=${{ github.event.inputs.environment || 'dev' }}" \
+              -var="tf_api_token=${{ secrets.TF_API_TOKEN }}" \
+              -var="tf_workspace_id=${{ secrets.TF_WORKSPACE_ID }}" \
+              -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME || '' }}" \
+              -var="dockerhub_token=${{ secrets.DOCKERHUB_TOKEN || '' }}" \
+              -var="dockerhub_repo=${{ secrets.DOCKERHUB_REPO || '' }}"
 
             # Récupérer le nom du bucket S3 après la création
             S3_BUCKET_NAME=$(terraform output -raw s3_bucket_name)
