--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -260,10 +260,72 @@ jobs:
           value: ${{ env.S3_BUCKET_NAME }}
           pa_token: ${{ secrets.GH_PAT }}
 
-      # Étape 7.8: Téléchargement des scripts dans S3
+# Cette étape a été déplacée après la création du bucket S3 et avant le déploiement de l'infrastructure
+
+      # Étape 8: Application des changements Terraform en deux phases
+      - name: Terraform Apply - Phase 1 (S3 Bucket)
+        id: apply_phase1
+        if: github.event.inputs.action == 'apply'
+        run: |
+          echo "::group::Terraform Apply - Phase 1 (S3 Bucket)"
+          # Exporter les variables d'environnement AWS
+          export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+          export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          export AWS_DEFAULT_REGION="${{ env.AWS_REGION }}"
+
+          # Réinitialiser Terraform pour s'assurer que l'état est à jour
+          echo "Réinitialisation de Terraform..."
+          terraform init -reconfigure
+
+          # Phase 1: Créer uniquement le bucket S3
+          echo "Phase 1: Création du bucket S3..."
+          terraform apply -auto-approve -target=module.s3 \
+            -var="aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+            -var="aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+            -var="db_username=${{ secrets.DB_USERNAME }}" \
+            -var="db_password=${{ secrets.DB_PASSWORD }}" \
+            -var="db_name=${{ secrets.DB_NAME || 'yourmedia' }}" \
+            -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
+            -var="github_token=${{ secrets.GH_PAT || '' }}" \
+            -var="repo_owner=${{ github.repository_owner }}" \
+            -var="repo_name=${{ github.repository }}" \
+            -var="ssh_private_key_path=~/.ssh/id_rsa" \
+            -var="ssh_private_key_content='${{ secrets.EC2_SSH_PRIVATE_KEY || '' }}'" \
+            -var="ssh_public_key='${{ secrets.EC2_SSH_PUBLIC_KEY || '' }}'" \
+            -var="enable_provisioning=${{ secrets.EC2_SSH_PRIVATE_KEY != '' }}" \
+            -var="environment=${{ github.event.inputs.environment }}" \
+            -var="tf_api_token=${{ secrets.TF_API_TOKEN }}" \
+            -var="tf_workspace_id=${{ secrets.TF_WORKSPACE_ID }}" \
+            -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}" \
+            -var="dockerhub_token=${{ secrets.DOCKERHUB_TOKEN }}" \
+            -var="dockerhub_repo=${{ secrets.DOCKERHUB_REPO }}"
+
+          # Récupérer le nom du bucket S3
+          S3_BUCKET_NAME=$(terraform output -raw s3_bucket_name)
+          echo "S3_BUCKET_NAME=$S3_BUCKET_NAME" >> $GITHUB_ENV
+          echo "Nom du bucket S3 défini comme variable d'environnement: $S3_BUCKET_NAME"
+
+          echo "Bucket S3 créé avec succès: $S3_BUCKET_NAME"
+          echo "::endgroup::"
+
+      # Étape 8.1: Attente pour s'assurer que le bucket S3 est disponible
+      - name: Wait for S3 Bucket Availability
+        id: wait_s3
+        if: github.event.inputs.action == 'apply'
+        run: |
+          echo "::group::Attente de la disponibilité du bucket S3"
+          echo "Attente de 30 secondes pour s'assurer que le bucket S3 est disponible..."
+          sleep 30
+
+          # Vérifier que le bucket est accessible
+          aws s3 ls s3://${{ env.S3_BUCKET_NAME }} || (echo "ERREUR: Le bucket S3 n'est pas accessible" && exit 1)
+          echo "Bucket S3 vérifié et accessible."
+          echo "::endgroup::"
+
+      # Étape 8.1.5: Téléchargement des scripts dans S3
       - name: Upload Scripts to S3
         id: upload_scripts
-        if: github.event.inputs.action == 'apply' && env.S3_BUCKET_NAME != ''
+        if: github.event.inputs.action == 'apply'
         run: |
           echo "::group::Téléchargement des scripts dans S3"
           # Créer le fichier de clé SSH si le secret est disponible
@@ -312,13 +374,58 @@ jobs:
           echo "Scripts téléchargés avec succès dans le bucket S3: ${{ env.S3_BUCKET_NAME }}"
           echo "::endgroup::"
 
-      # Étape 8: Application des changements Terraform
-      - name: Terraform Apply
-        id: apply
+      # Étape 8.1.6: Attente supplémentaire pour s'assurer que les scripts sont disponibles
+      - name: Wait for Scripts Availability
+        id: wait_scripts
         if: github.event.inputs.action == 'apply'
         run: |
-          echo "::group::Terraform Apply"
-          terraform apply -auto-approve tfplan
+          echo "::group::Attente de la disponibilité des scripts"
+          echo "Attente de 15 secondes pour s'assurer que les scripts sont disponibles..."
+          sleep 15
+
+          # Vérifier que les scripts sont accessibles
+          echo "Vérification de la disponibilité des scripts..."
+          aws s3 ls s3://${{ env.S3_BUCKET_NAME }}/scripts/ --recursive
+          echo "Scripts vérifiés et accessibles."
+          echo "::endgroup::"
+
+      # Étape 8.2: Application des changements Terraform - Phase 2 (Reste de l'infrastructure)
+      - name: Terraform Apply - Phase 2 (Infrastructure)
+        id: apply_phase2
+        if: github.event.inputs.action == 'apply'
+        run: |
+          echo "::group::Terraform Apply - Phase 2 (Infrastructure)"
+          # Exporter les variables d'environnement AWS
+          export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+          export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          export AWS_DEFAULT_REGION="${{ env.AWS_REGION }}"
+
+          # Réinitialiser Terraform pour s'assurer que l'état est à jour
+          echo "Réinitialisation de Terraform..."
+          terraform init -reconfigure
+
+          # Phase 2: Déployer le reste de l'infrastructure
+          echo "Phase 2: Déploiement du reste de l'infrastructure..."
+          terraform apply -auto-approve \
+            -var="aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+            -var="aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+            -var="db_username=${{ secrets.DB_USERNAME }}" \
+            -var="db_password=${{ secrets.DB_PASSWORD }}" \
+            -var="db_name=${{ secrets.DB_NAME || 'yourmedia' }}" \
+            -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
+            -var="github_token=${{ secrets.GH_PAT || '' }}" \
+            -var="repo_owner=${{ github.repository_owner }}" \
+            -var="repo_name=${{ github.repository }}" \
+            -var="ssh_private_key_path=~/.ssh/id_rsa" \
+            -var="ssh_private_key_content='${{ secrets.EC2_SSH_PRIVATE_KEY || '' }}'" \
+            -var="ssh_public_key='${{ secrets.EC2_SSH_PUBLIC_KEY || '' }}'" \
+            -var="enable_provisioning=${{ secrets.EC2_SSH_PRIVATE_KEY != '' }}" \
+            -var="environment=${{ github.event.inputs.environment }}" \
+            -var="tf_api_token=${{ secrets.TF_API_TOKEN }}" \
+            -var="tf_workspace_id=${{ secrets.TF_WORKSPACE_ID }}" \
+            -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}" \
+            -var="dockerhub_token=${{ secrets.DOCKERHUB_TOKEN }}" \
+            -var="dockerhub_repo=${{ secrets.DOCKERHUB_REPO }}"
           echo "::endgroup::"
 
           # Affiche les outputs après l'application
